[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/sideViewDoor.png" type="Texture" id=1]
[ext_resource path="res://scripts/DoorArea.gd" type="Script" id=2]
[ext_resource path="res://Sounds/door open.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/door close.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 91.0645, 293.373 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 119.56, 341.708 )

[node name="SideViewDoor" type="Sprite"]
position = Vector2( -16, 8 )
texture = ExtResource( 1 )

[node name="DoorOpen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 5.36

[node name="DoorClose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 5.36

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -1.14868, 4.27142 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.926758, 0.0429688 )
shape = SubResource( 2 )

[node name="Hint" type="Label" parent="Area2D"]
visible = false
margin_left = -144.25
margin_top = -429.921
margin_right = -98.2497
margin_bottom = -415.921
rect_scale = Vector2( 6, 6 )
custom_colors/font_color = Color( 0.988235, 0.968627, 0.968627, 1 )
custom_colors/font_color_shadow = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
text = "Press E"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
